Question fo tests, configuring migrations and docker

--- a/.env.template
+++ b/.env.template
@@ -1,2 +1,9 @@
-APP_SETTINGS="config.DevelopmentConfig"
-DATABASE_URL='postgresql://USERNAME:PASSWORD@localhost/DBNAME'
+# Конфигурация настроек для запуска приложения
+APP_SETTINGS="app.config.DevelopmentConfig"
+
+# Подключение к PostgresSQL
+DB_HOST=postgres
+DB_PORT=5432
+DB_NAME=postgres
+DB_USER=postgres
+DB_PASS=postgres
