Add README.md, configure nginx

--- a/.env.template
+++ b/.env.template
@@ -1,9 +1,13 @@
-# Конфигурация настроек для запуска приложения
-APP_SETTINGS="app.config.DevelopmentConfig"
+#APP_SETTINGS="app.config.DevelopmentConfig"
+APP_SETTINGS="app.config.ProductionConfig"
 
-# Подключение к PostgresSQL
-DB_HOST=postgres
 DB_PORT=5432
 DB_NAME=postgres
 DB_USER=postgres
 DB_PASS=postgres
+
+# Разработка и тестирование
+#DB_HOST=localhost
+
+# Docker и деплой
+DB_HOST=db
