--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,15 +1,19 @@
 user  www-data;
-worker_processes  auto;
+worker_processes  auto;  # Используем все доступные ядра для лучшей производительности
 
+# notice - уровень логирования между дефолтным error (не очень подробным) и info (куда более подробным)
 error_log  /var/log/nginx/error.log notice;
+# pid процесса (для быстрой возможности прервать нужный процесс)
 pid        /var/run/nginx.pid;
 
-
+# Максимальное кол-во одновременных соединений для воркера
 events {
     worker_connections  1024;
 }
 
+# Общие настройки http-сервера
 http {
+    # Логирование
     include       /etc/nginx/mime.types;
     default_type  application/octet-stream;
 
@@ -19,56 +23,38 @@ http {
 
     access_log  /var/log/nginx/access.log  main;
 
-    sendfile        on;
-    keepalive_timeout  65;
+    sendfile        on;  # Оптимизация для более быстрой отдачи статики
+    keepalive_timeout  65;  # Время открытого tcp-соединение (для быстрого повторного запроса клиента)
 
-
-   upstream app_server {
-    # fail_timeout=0 means we always retry an upstream even if it failed
-    # to return a good HTTP response
-
-    # for UNIX domain socket setups
-    #server unix:/tmp/gunicorn.sock fail_timeout=0;
-
-    # for a TCP configuration
-    server app:6789 fail_timeout=0;
-  }
-
-  server {
-
-    listen 80 deferred;
-    client_max_body_size 4G;
-
-    # set the correct host(s) for your site
-    server_name localhost;
-
-    keepalive_timeout 5;
-
-    # path for static files
-    root /usr/share/nginx/html/static;
-
-    location /api/ {
-      # checks for static file, if not found proxy to app
-      try_files $uri @backend;
+    upstream app_server {
+        server api:5555 fail_timeout=0;
     }
 
-     location / {
-          try_files $uri $uri/index.html @backend;
-    }
+    server {
 
-    location /profile/userid {
-        index index.html;
-    }
+        listen 80 deferred;  # Слушать 80 порт
+        client_max_body_size 4G;
 
-    location @backend {
-      proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-      proxy_set_header X-Forwarded-Proto $scheme;
-      proxy_set_header Host $http_host;
-      # we don't want nginx trying to do something clever with
-      # redirects, we set the Host: header above already.
-      proxy_redirect off;
-      proxy_pass http://app_server;
+        server_name localhost;  # Домен
+
+        keepalive_timeout 5;
+
+        # Местоположение статических файлов (Dockerfile)
+        root /usr/share/nginx/html/static;
+
+        location /api/ {
+            try_files $uri @proxy_to_app;
+        }
+
+        location @proxy_to_app {
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
+            proxy_set_header Host $http_host;
+            # we don't want nginx trying to do something clever with
+            # redirects, we set the Host: header above already.
+            proxy_redirect off;
+            proxy_pass http://app_server;
+        }
     }
-  }
 
 }
