--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -20,9 +20,10 @@ services:
     env_file:
       - .env
     container_name: api
-#    command: ["docker/app.sh"]
+    expose:
+      - 5555
     ports:
-      - 5000:5000
+      - 5555:5000
     depends_on:
       - postgres
     logging:
