--- a/nginx/Dockerfile
+++ b/nginx/Dockerfile
@@ -1,4 +1,4 @@
 FROM nginx
 
 COPY nginx.conf /etc/nginx/nginx.conf
-COPY ./static /usr/share/nginx/html/static
+COPY ./static /usr/share/nginx/html
