--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -31,9 +31,10 @@ http {
             try_files $uri @proxy_to_app;
         }
 
-        location /docs {
+        location /apidocs/ {
             proxy_pass http://app_server;
         }
+
         location /openapi.json {
             proxy_pass http://app_server;
         }
